# Dictator

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  build-gpu.bat  build.bat  dictate.bat  run.bat  test-inject.bat
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/companion/: index.html  setup.html
apps/desktop/resources/openwakeword/: hey_glados.onnx
apps/desktop/src/: audio_capture.rs  gpu_detect.rs  gpu_guard.rs  history.rs  injection.rs  lib.rs  live.rs  llm.rs  main.rs  model_manager.rs  power_events.rs  server.rs  tailscale.rs  templates.rs  transcription.rs  tts.rs  user_prefs.rs  vad.rs  wake_word.rs  word_bank.rs
apps/desktop/src/bin_archive/: dictate_mic.rs  gen_test_wav.rs  test_e2e.rs  test_inject.rs  test_transcribe.rs
apps/desktop/ui/: index.html
