[package]
name = "dictator"
version = "0.4.0"
edition = "2024"
default-run = "dictator"

[lib]
name = "dictator"
path = "src/lib.rs"

[features]
default = ["gpu"]
gpu = ["whisper-rs/vulkan", "llama-cpp-2/vulkan"]  # Vulkan GPU acceleration (needs Vulkan SDK to build, runtime falls back to CPU)

[dependencies]
# Whisper.cpp Rust bindings for local transcription
whisper-rs = "0.16"

# Windows API access for text injection
windows = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
] }

# Clipboard access (cross-platform, simpler API)
arboard = "3"

# Audio file loading
hound = "3.5"

# Local LLM for text formatting
llama-cpp-2 = "0.1"
encoding_rs = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Microphone capture
cpal = "0.15"

# Serialization for Tauri commands
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web server for phone companion
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

# HTTPS for phone companion (iOS requires HTTPS for microphone access)
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = "0.13"

# Text-to-speech (Windows SAPI)
tts = "0.26"

# Audio playback (for Piper TTS output)
rodio = "0.20"

# Blocking HTTP client (for cloud TTS APIs — no tokio conflict)
ureq = { version = "3", features = ["json"] }

# Zip extraction (for piper.exe download)
zip = "2"

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"

# Windows toast notifications
notify-rust = "4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "dictator"
path = "src/main.rs"
